--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Jake Zeisel is an audio mixing and mastering engineer based in <a href="https://
 </p>
 
 <p>
-<img src="me.jpg" widt=50 height=50>
+<img src="me.jpg" width=50 height=50>
 </p>
 
 <p>
