--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <p>
 Jake Zeisel is an audio mixing and mastering engineer based in <a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago, IL</a>.
 </p>
+  
+
 
 <p>
 <img src="me.jpg" width=50 height=50>
@@ -49,7 +51,11 @@ contact <a href="mailto: jacobzeisel@gmail.com">jacobzeisel@gmail.com</a> for ra
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 
+<video width ="400" autoplay loop muted>
+<source src="dancermp4.mp4" type="video/mp4">
+</video>
 
+  
 </div>
 </body>
 </html>
