--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 
 <h1>
 <div id="wrapper">
-<video width ="300" autoplay loop muted>
+<video width ="400" autoplay loop muted>
 <source src="jake4.mp4" type="video/mp4">
 </video>
 </div>
@@ -36,6 +36,13 @@
 
 
 <!--list of works -->
+<p>
+<img src="everyoneseemssweaty.jpg" width=50 height=50>
+<a href=https://open.spotify.com/album/5qBiKJ90KtiGOn3edjCWg0 target="_blank">
+Family Consumer Science - Everyone Seems Sweaty in Australia</a>
+*
+</p>
+
 <p>
 <img src ="lunaris.jpg" width=50 height=50>
 <a href=https://joeychimes.bandcamp.com/album/lunaris target="_blank">Joey Chimes - Lunaris</a>
