--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@ Jake Zeisel is an audio mixing and mastering engineer based in <a href="https://
 </p>
 
 <p>
-he would LOVE to work with you on your next album or film or podcast
+he would LOVE to work with you on your next album or song or film or podcast
 </p>
 
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 
 <p>
-contact <a href="mailto: jacobzeisel@gmail.com">jacobzeisel@gmail.com</a> for rates and availability
+contact <a href="mailto: jakezeisel@gmail.com">jakezeisel@gmail.com</a> for rates and availability
 </p>
 
 <p>&nbsp;</p> 
