add producer credit

--- a/credits.html
+++ b/credits.html
@@ -30,7 +30,7 @@
 
 <!-- reference -->
 <p>
-* = mastered &nbsp;&nbsp; / = mixed &nbsp;&nbsp;  + = performed
+* == mastered &nbsp;&nbsp; / == mixed &nbsp;&nbsp;  + == performed &nbsp;&nbsp; ! == produced
 </p>
 
 
@@ -45,62 +45,62 @@ Family Consumer Science - Everyone Seems Sweaty in Australia</a>
 
 <p>
 <img src ="lunaris.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/141l47FG7GWtBY7zgA69zO target="_blank">Joey Chimes - Lunaris</a>
+<a href=https://joeychimes.bandcamp.com/album/lunaris target="_blank">Joey Chimes - Lunaris</a>
 *
 </p>
 
 <p>
 <img src="family.jpeg" width=50 height=50>
-<a href=https://open.spotify.com/album/792XztJVUm4Oo8P6HQfNLB target="_blank">
+<a href=https://familyconsumerscience.bandcamp.com/album/family-consumer-science-2018-2019-remastered target="_blank">
 Family Consumer Science - 2018-2019 Remastered</a>
 *
 </p>
 
 <p>
 <img src="flintknapper.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/3VDEHAHGYUGTgO6Iv2rJBR?si=Gt_R5q7PQ9G3lgIrsG5qRA&nd=1 target="_blank">
+<a href=https://flintknapper.bandcamp.com/album/crayon-do-attitude target="_blank">
 Flintknapper - Crayon-Do Attitude</a>
 / *
 </p>
 
 <p>
 <img src="son.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/343CjJS9XmS6GzSHUrCYMf?si=9gSkr-BXQOWnafMv4IX8Ow&nd=1 target="_blank">
+<a href=https://sawyerjamesounds.bandcamp.com/album/son target="_blank">
 Sawyer James - SON</a>
 *
 </p>
 
 <p>
 <img src="intransit.jpg" width=50 height=50>
-<a href=https://open.spotify.com/artist/4oogY16zvQ1pSEVhaGQsle?si=ESzym0Y1TtORjoN0XUQ83g&nd=1 target="_blank">
+<a href=https://asmallbird.bandcamp.com/album/in-transit target="_blank">
 A Small Bird - In Transit</a>
 *
 </p>
 
 <p>
 <img src= "coriander.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/67fWBImK4tLiUVEw6ujSOD target="_blank">
+<a href=https://marktwangband.bandcamp.com/album/coriander target="_blank">
 Mark Twang - Coriander</a>
 /
 </p>
 
 <p>
 <img src= "reflections.jpg" width=50 height= 50>
-<a href=https://open.spotify.com/album/7F8SwHet0SndlhBrxW4cMz target="_blank">
+<a href=https://joeychimes.bandcamp.com/album/reflections-on-solitude target="_blank">
 Joey Chimes - Reflections on Solitude</a>
 *
 </p>
 
 <p>
 <img src="daymoon.jpg" width=50 height=50>
-<a href=https://open.spotify.com/artist/3L5TtG2DtHOcUL2W2SHimL target="_blank">
+<a href=https://daymoonband.bandcamp.com/releases target="_blank">
 Day Moon - Veil</a>
 /
 </p>
 
 <p>
 <img src="rearview.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/2YjkREm0HxuXlIuABqVekQ target="_blank">
+<a href=https://marktwangband.bandcamp.com/album/rearview-ep target="_blank">
 Mark Twang - Rearview</a>
 / +
 </p>
@@ -128,16 +128,16 @@ Pillow Switch - Pillow Switch</a>
 
 <p>
 <img src="platinum.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/3h1DVRO83qgGyGSrKRrHY8 target="_blank">
+<a href=https://sheddingvelvet.bandcamp.com/album/shedding-velvet-goes-platinum target="_blank">
 Shedding Velvet - Shedding Velvet Goes Platinum</a>
-/ +
+/ + !
 </p>
 
 <p>
 <img src="sv.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/1GwtkMkJQFd8lptlp9GpeI target="_blank">
+<a href=https://sheddingvelvet.bandcamp.com/album/shedding-velvet target="_blank">
 Shedding Velvet - Shedding Velvet</a>
-/
+/ !
 </p>
 
 <p>
