change catalog to credits

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
-<a href="catalog.html">credits</a>
+<a href="credits.html">credits</a>
 </p>
 
 <p>&nbsp;</p> 
