--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <h1>
 <div id="wrapper">
-<video width ="400" autoplay loop muted>
+<video width ="300" autoplay loop muted>
 <source src="jake4.mp4" type="video/mp4">
 </video>
 </div>
@@ -21,16 +21,17 @@
 
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
-<a href="credits.html">credits</a>
+<a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
+<a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
+<a href="dancer.html">dancer</a> 
 </p>
 
 <p>&nbsp;</p> 
 
 <p>
-Jake Zeisel is an audio mixing and mastering engineer based in <a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago, IL</a>.
+Jake Zeisel is an audio mixing and mastering engineer based in 
+<a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago, IL</a>.
 </p>
-  
-
 
 <p>
 <img src="me.jpg" width=50 height=50>
@@ -44,14 +45,14 @@ he would LOVE to work with you on your next album or song or film or podcast
 <p>&nbsp;</p> 
 
 <p>
-contact <a href="mailto: jakezeisel@gmail.com">jakezeisel@gmail.com</a> for rates and availability
+contact <a href="mailto: jacobzeisel@gmail.com">jacobzeisel@gmail.com</a> for rates and availability
 </p>
 
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 
-  
+
 </div>
 </body>
 </html>
