add human and dancer

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 
 <h1>
 <div id="wrapper">
-<video width ="400" autoplay loop muted>
+<video width ="300" autoplay loop muted>
 <source src="jake4.mp4" type="video/mp4">
 </video>
 </div>
@@ -21,7 +21,9 @@
 
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
-<a href="credits.html">credits</a>
+<a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
+<a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
+<a href="dancer.html">dancer</a> 
 </p>
 
 <p>&nbsp;</p>
