add spotify embed

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@ he would LOVE to work with you on your next album or song or film or podcast
 contact <a href="mailto: jacobzeisel@gmail.com">jacobzeisel@gmail.com</a> for rates and availability
 </p>
 
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<iframe src="https://open.spotify.com/embed/playlist/2nZFDuAzX6LVxddrlEMHSc" 
+width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
