--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 
 <h1>
 <div id="wrapper">
-<video width ="300" autoplay loop muted>
+<video width ="300" preload="auto" playsinline autoplay loop muted>
 <source src="jake4.mp4" type="video/mp4">
 </video>
 </div>
