--- a/dancer.html
+++ b/dancer.html
@@ -24,7 +24,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<video width ="500" autoplay loop muted>
+<video width ="500" preload="auto" playsinline autoplay loop muted>
 <source src="dancermp4.mp4" type="video/mp4">
 <source src="dancerogg.ogg" type="video/ogg">
 <source src="dancerwebm.webm" type="video/webm">
