--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  
+<meta name="viewport" content= "width=device-width">
+<meta name="viewport" content= "height=device-height">
+<meta name="viewport" content= "initial-scale=1.0">
 
 <head>
 
