--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
 
 <head>
-  
-
 
 <title>Jake Z Music</title>
 
@@ -11,19 +9,19 @@
 </head>
 
 <body>
-  
-<meta name="viewport" content= "width=device-width">
-<meta name="viewport" content= "initial-scale=0.5">
-  
 <div id="main_index">
 
 <h1>
+Jake Zeisel Audio Mixing and Mastering: Chicago,IL
+</h1>
+
+<h2>
 <div id="wrapper">
 <video width ="300" preload="auto" playsinline autoplay loop muted>
 <source src="jake4.mp4" type="video/mp4">
 </video>
 </div>
-</h1>
+</h2>
 
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
