--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Jake Zeisel Audio Mixing and Mastering: Chicago,IL
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
 <a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
+<!--<a href="blog.html">blog</a> &nbsp;&nbsp;&nbsp; -->
 <a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
 <a href="dancer.html">dancer</a> 
 </p>
@@ -64,6 +65,19 @@ width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypt
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 
+
+<h3>latest release!</h3>
+<p>
+<a href=https://open.spotify.com/album/16oxtOmqCfR9u1ib19CbYP?si=Z9UzKmM4QSm4Vcwnf32Qrw target="_blank">
+<img src="sonofbird.jpg" width=300>
+</a>
+</p>
+
+<h3>Son of Bird - Be Well</h3>
+
+<p>
+mixed, co-produced
+</p>
 
 </div>
 </body>
