--- a/catalog.html
+++ b/catalog.html
@@ -39,6 +39,14 @@
 
 <!--list of works -->
 <p>
+<img src="sonofbird.jpg" width=50 height=50>
+<a href=https://open.spotify.com/album/16oxtOmqCfR9u1ib19CbYP?si=Z9UzKmM4QSm4Vcwnf32Qrw target="_blank">
+Son of Bird - Be Well</a>
+/ !
+</p>
+
+
+<p>
 <img src="everyoneseemssweaty.jpg" width=50 height=50>
 <a href=https://open.spotify.com/album/5qBiKJ90KtiGOn3edjCWg0 target="_blank">
 Family Consumer Science - Everyone Seems Sweaty in Australia</a>
