--- a/funguy.html
+++ b/funguy.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>Dancer</title>
+<title>Fun Guy</title>
 
 <link href="style.css" type= "text/css" rel="stylesheet">
 
@@ -17,8 +17,7 @@
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
 <a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
-<a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
-<a href="dancer.html">dancer</a> 
+<a href="funguy.html">fun guy</a> 
 </p>
 
 <p>&nbsp;</p>
