--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@ Jake Zeisel Audio Mixing and Mastering: Chicago,IL
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
 <a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
-<!--<a href="blog.html">blog</a> &nbsp;&nbsp;&nbsp; -->
-<a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
-<a href="dancer.html">dancer</a> 
+<a href="funguy.html">fun guy</a> 
 </p>
 
 <p>&nbsp;</p> 
