--- a/catalog.html
+++ b/catalog.html
@@ -22,8 +22,7 @@
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
 <a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
-<a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
-<a href="dancer.html">dancer</a> 
+<a href="funguy.html">fun guy</a> 
 </p>
 
 <p>&nbsp;</p>
