--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ Jake Zeisel Audio Mixing and Mastering: Chicago,IL
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
 <a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
-<a href="funguy.html">fun guy</a> 
+<!--<a href="blog.html">blog</a> &nbsp;&nbsp;&nbsp; -->
+<a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
+<a href="dancer.html">dancer</a> 
 </p>
 
 <p>&nbsp;</p> 
@@ -64,17 +66,33 @@ width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypt
 <p>&nbsp;</p> 
 
 
-<h3>latest release!</h3>
+<h3>latest releases!</h3>
+
 <p>
-<a href=https://open.spotify.com/album/16oxtOmqCfR9u1ib19CbYP?si=Z9UzKmM4QSm4Vcwnf32Qrw target="_blank">
-<img src="sonofbird.jpg" width=300>
+<a href=https://open.spotify.com/album/1BxITtgUSPhUg8011ueTVK?si=L5m3tGeJSrCus3V-vBueFA target="_blank">
+<img src="sawyerjames2.jpg" width=300>
 </a>
 </p>
 
-<h3>Son of Bird - Be Well</h3>
+<h3>Sawyer James - Rexburg</h3>
 
 <p>
-mixed, co-produced
+Mastered
+</p>
+
+<p>&nbsp;</p> 
+<p>&nbsp;</p> 
+
+<p>
+<a href=https://open.spotify.com/album/4XVk40okyOmKLpkRKJKN7C?si=wbwQjJKWQPyT3z0fQ81y9gtarget="_blank">
+<img src="solarsurfer.jpg" width=300>
+</a>
+</p>
+
+<h3>Surf Party USA - Solar Surfer</h3>
+
+<p>
+Mastered
 </p>
 
 </div>
