--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,8 @@
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
 <a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
-<a href="funguy.html">fun guy</a> 
+<a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
+<a href="dancer.html">dancer</a> 
 </p>
 
 <p>&nbsp;</p>
@@ -37,6 +38,22 @@
 
 
 <!--list of works -->
+<p>
+<img src="sawyerjames2.jpg" width=50 height=50>
+<a href=https://open.spotify.com/album/1BxITtgUSPhUg8011ueTVK?si=L5m3tGeJSrCus3V-vBueFA target="_blank">
+Sawyer James - Rexburg</a>
+/ *
+</p>
+
+
+<p>
+<img src="solarsurfer.jpg" width=50 height=50>
+<a href=https://open.spotify.com/album/4XVk40okyOmKLpkRKJKN7C?si=wbwQjJKWQPyT3z0fQ81y9g target="_blank">
+Surf Party USA - Solar Surfer</a>
+/ *
+</p>
+
+
 <p>
 <img src="sonofbird.jpg" width=50 height=50>
 <a href=https://open.spotify.com/album/16oxtOmqCfR9u1ib19CbYP?si=Z9UzKmM4QSm4Vcwnf32Qrw target="_blank">
