--- a/catalog.html
+++ b/catalog.html
@@ -40,8 +40,8 @@
 <!--list of works -->
 <p>
 <img src="sawyerjames2.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/1BxITtgUSPhUg8011ueTVK?si=L5m3tGeJSrCus3V-vBueFA target="_blank">
-Sawyer James - Rexburg</a>
+<a href=https://open.spotify.com/album/265WW7jRehlmKPEofX7Hy5?si=fLcA5N5ASWqTHbbOtAvZKQ target="_blank">
+Sawyer James - Haiku</a>
 *
 </p>
 
