--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@ width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypt
 <h3>latest releases!</h3>
 
 <p>
-<a href=https://open.spotify.com/album/1BxITtgUSPhUg8011ueTVK?si=L5m3tGeJSrCus3V-vBueFA target="_blank">
+<a href=https://open.spotify.com/album/265WW7jRehlmKPEofX7Hy5?si=fLcA5N5ASWqTHbbOtAvZKQ target="_blank">
 <img src="sawyerjames2.jpg" width=300>
 </a>
 </p>
 
-<h3>Sawyer James - Rexburg</h3>
+<h3>Sawyer James - Haiku</h3>
 
 <p>
 Mastered
