--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>Jake Z Music</title>
+<title>Jake Zeisel Music</title>
 
 <link href="style.css" type= "text/css" rel="stylesheet">
 
