add dates to catalog

--- a/catalog.html
+++ b/catalog.html
@@ -28,150 +28,207 @@
 
 <p>&nbsp;</p>
 
-<b> <!-- bold out -->
-
-<!-- reference -->
-<p>
-* == mastered &nbsp;&nbsp; / == mixed &nbsp;&nbsp;  + == performed &nbsp;&nbsp; ! == produced
-</p>
-
-
-
-<!--list of works -->
-<p>
-<img src="sawyerjames2.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/265WW7jRehlmKPEofX7Hy5?si=fLcA5N5ASWqTHbbOtAvZKQ target="_blank">
-Sawyer James - Haiku</a>
-*
-</p>
+<b>
+    <!-- bold out -->
+    <!-- reference -->
+    <p>
+        * == mastered &nbsp;&nbsp; / == mixed &nbsp;&nbsp;  + == performed &nbsp;&nbsp; ! == produced
+    </p>
 
 
-<p>
-<img src="solarsurfer.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/4XVk40okyOmKLpkRKJKN7C?si=wbwQjJKWQPyT3z0fQ81y9g target="_blank">
-Surf Party USA - Solar Surfer</a>
-*
-</p>
+    <!--list of works -->
 
 
-<p>
-<img src="sonofbird.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/16oxtOmqCfR9u1ib19CbYP?si=Z9UzKmM4QSm4Vcwnf32Qrw target="_blank">
-Son of Bird - Be Well</a>
-/ !
-</p>
+    <h2>
+        <p>
+            &nbsp
+        </p>
+        <p>
+            2021
+        </p>
+        <p>
+            -------------------------------------------------
+        </p>
+    </h2>
 
 
-<p>
-<img src="everyoneseemssweaty.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/5qBiKJ90KtiGOn3edjCWg0 target="_blank">
-Family Consumer Science - Everyone Seems Sweaty in Australia</a>
-*
-</p>
+    <p>
+        <img src="sawyerjames2.jpg" width=50 height=50>
+        <a href=https://open.spotify.com/album/265WW7jRehlmKPEofX7Hy5?si =fLcA5N5ASWqTHbbOtAvZKQ target="_blank">
+            Sawyer James - Haiku
+        </a>
+        *
+    </p>
 
-<p>
-<img src ="lunaris.jpg" width=50 height=50>
-<a href=https://joeychimes.bandcamp.com/album/lunaris target="_blank">Joey Chimes - Lunaris</a>
-*
-</p>
 
-<p>
-<img src="family.jpeg" width=50 height=50>
-<a href=https://familyconsumerscience.bandcamp.com/album/family-consumer-science-2018-2019-remastered target="_blank">
-Family Consumer Science - 2018-2019 Remastered</a>
-*
-</p>
+    <p>
+        <img src="solarsurfer.jpg" width=50 height=50>
+        <a href=https://open.spotify.com/album/4XVk40okyOmKLpkRKJKN7C?si =wbwQjJKWQPyT3z0fQ81y9g target="_blank">
+            Surf Party USA - Solar Surfer
+        </a>
+        *
+    </p>
 
-<p>
-<img src="flintknapper.jpg" width=50 height=50>
-<a href=https://flintknapper.bandcamp.com/album/crayon-do-attitude target="_blank">
-Flintknapper - Crayon-Do Attitude</a>
-/ *
-</p>
 
-<p>
-<img src="son.jpg" width=50 height=50>
-<a href=https://sawyerjamesounds.bandcamp.com/album/son target="_blank">
-Sawyer James - SON</a>
-*
-</p>
+    <p>
+        <img src="sonofbird.jpg" width=50 height=50>
+        <a href=https://open.spotify.com/album/16oxtOmqCfR9u1ib19CbYP?si =Z9UzKmM4QSm4Vcwnf32Qrw target="_blank">
+            Son of Bird - Be Well
+        </a>
+        / !
+    </p>
 
-<p>
-<img src="intransit.jpg" width=50 height=50>
-<a href=https://asmallbird.bandcamp.com/album/in-transit target="_blank">
-A Small Bird - In Transit</a>
-*
-</p>
 
-<p>
-<img src= "coriander.jpg" width=50 height=50>
-<a href=https://marktwangband.bandcamp.com/album/coriander target="_blank">
-Mark Twang - Coriander</a>
-/
-</p>
+    <p>
+        <img src="everyoneseemssweaty.jpg" width=50 height=50>
+        <a href=https://open.spotify.com/album/5qBiKJ90KtiGOn3edjCWg0 target="_blank">
+            Family Consumer Science - Everyone Seems Sweaty in Australia
+        </a>
+        *
+    </p>
 
-<p>
-<img src= "reflections.jpg" width=50 height= 50>
-<a href=https://joeychimes.bandcamp.com/album/reflections-on-solitude target="_blank">
-Joey Chimes - Reflections on Solitude</a>
-*
-</p>
+    <p>
+        <img src="lunaris.jpg" width=50 height=50>
+        <a href=https://joeychimes.bandcamp.com/album/lunaris target="_blank">Joey Chimes - Lunaris</a>
+        *
+    </p>
 
-<p>
-<img src="daymoon.jpg" width=50 height=50>
-<a href=https://daymoonband.bandcamp.com/releases target="_blank">
-Day Moon - Veil</a>
-/
-</p>
 
-<p>
-<img src="rearview.jpg" width=50 height=50>
-<a href=https://marktwangband.bandcamp.com/album/rearview-ep target="_blank">
-Mark Twang - Rearview</a>
-/ +
-</p>
+    <h2>
+        <p>
+            &nbsp
+        </p>
+        <p>
+            2020
+        </p>
+        <p>
+            -------------------------------------------------
+        </p>
+    </h2>
 
-<p>
-<img src="variousdrafts.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/7vYyV69dNmKHQOeTHzTFHm?si=xdV--kHiTTmFIHIYBSuXXg target="_blank">
-Family Consumer Science - Various Drafts of Feeling Really Bad</a>
-*
-</p>
+    <p>
+        <img src="family.jpeg" width=50 height=50>
+        <a href=https://familyconsumerscience.bandcamp.com/album/family-consumer-science-2018-2019-remastered target="_blank">
+            Family Consumer Science - 2018-2019 Remastered
+        </a>
+        *
+    </p>
 
-<p>
-<img src="progreport.jpg" width=50 height=50>
-<a href=https://marktwangband.bandcamp.com/album/progress-report-demos target="_blank">
-Mark Twang - Progress Report</a>
-/
-</p>
+    <p>
+        <img src="flintknapper.jpg" width=50 height=50>
+        <a href=https://flintknapper.bandcamp.com/album/crayon-do-attitude target="_blank">
+            Flintknapper - Crayon-Do Attitude
+        </a>
+        / *
+    </p>
 
-<p>
-<img src="pillow switch.jpg" width=50 height=50>
-<a href=https://open.spotify.com/album/7bgQ91bJIAOAsAEAKNLnYT?si=ixasPsyjRNiE41lGz78V0g target="_blank">
-Pillow Switch - Pillow Switch</a>
-*
-</p>
+    <p>
+        <img src="son.jpg" width=50 height=50>
+        <a href=https://sawyerjamesounds.bandcamp.com/album/son target="_blank">
+            Sawyer James - SON
+        </a>
+        *
+    </p>
 
-<p>
-<img src="platinum.jpg" width=50 height=50>
-<a href=https://sheddingvelvet.bandcamp.com/album/shedding-velvet-goes-platinum target="_blank">
-Shedding Velvet - Shedding Velvet Goes Platinum</a>
-/ + !
-</p>
+    <p>
+        <img src="intransit.jpg" width=50 height=50>
+        <a href=https://asmallbird.bandcamp.com/album/in-transit target="_blank">
+            A Small Bird - In Transit
+        </a>
+        *
+    </p>
 
-<p>
-<img src="sv.jpg" width=50 height=50>
-<a href=https://sheddingvelvet.bandcamp.com/album/shedding-velvet target="_blank">
-Shedding Velvet - Shedding Velvet</a>
-/ !
-</p>
+    <p>
+        <img src="coriander.jpg" width=50 height=50>
+        <a href=https://marktwangband.bandcamp.com/album/coriander target="_blank">
+            Mark Twang - Coriander
+        </a>
+        /
+    </p>
 
-<p>
-<img src="scared.jpg" width=50 height=50>
-<a href=https://luckyy.bandcamp.com/album/please-dont-get-scared target="_blank">
-Lucky - Don't Get Scared</a>
-*
-</p>
+    <p>
+        <img src="reflections.jpg" width=50 height=50>
+        <a href=https://joeychimes.bandcamp.com/album/reflections-on-solitude target="_blank">
+            Joey Chimes - Reflections on Solitude
+        </a>
+        *
+    </p>
+
+    <p>
+        <img src="daymoon.jpg" width=50 height=50>
+        <a href=https://daymoonband.bandcamp.com/releases target="_blank">
+            Day Moon - Veil
+        </a>
+        /
+    </p>
+
+    <h2>
+        <p>
+            &nbsp
+        </p>
+        <p>
+            2019 et al
+        </p>
+        <p>
+            -------------------------------------------------
+        </p>
+    </h2>
+
+    <p>
+        <img src="rearview.jpg" width=50 height=50>
+        <a href=https://marktwangband.bandcamp.com/album/rearview-ep target="_blank">
+            Mark Twang - Rearview
+        </a>
+        / +
+    </p>
+
+    <p>
+        <img src="variousdrafts.jpg" width=50 height=50>
+        <a href=https://open.spotify.com/album/7vYyV69dNmKHQOeTHzTFHm?si =xdV--kHiTTmFIHIYBSuXXg target="_blank">
+            Family Consumer Science - Various Drafts of Feeling Really Bad
+        </a>
+        *
+    </p>
+
+    <p>
+        <img src="progreport.jpg" width=50 height=50>
+        <a href=https://marktwangband.bandcamp.com/album/progress-report-demos target="_blank">
+            Mark Twang - Progress Report
+        </a>
+        /
+    </p>
+
+    <p>
+        <img src="pillow switch.jpg" width=50 height=50>
+        <a href=https://open.spotify.com/album/7bgQ91bJIAOAsAEAKNLnYT?si =ixasPsyjRNiE41lGz78V0g target="_blank">
+            Pillow Switch - Pillow Switch
+        </a>
+        *
+    </p>
+
+    <p>
+        <img src="platinum.jpg" width=50 height=50>
+        <a href=https://sheddingvelvet.bandcamp.com/album/shedding-velvet-goes-platinum target="_blank">
+            Shedding Velvet - Shedding Velvet Goes Platinum
+        </a>
+        / + !
+    </p>
+
+    <p>
+        <img src="sv.jpg" width=50 height=50>
+        <a href=https://sheddingvelvet.bandcamp.com/album/shedding-velvet target="_blank">
+            Shedding Velvet - Shedding Velvet
+        </a>
+        / !
+    </p>
+
+    <p>
+        <img src="scared.jpg" width=50 height=50>
+        <a href=https://luckyy.bandcamp.com/album/please-dont-get-scared target="_blank">
+            Lucky - Don't Get Scared
+        </a>
+        *
+    </p>
 
 </b> <!-- bold out end -->
 
