--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Jake Zeisel Audio Mixing and Mastering: Chicago,IL
 
 <p>
 Jake Zeisel is an audio mixing and mastering engineer based in 
-<a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago, IL</a>!!!
+<a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago, IL</a>.
 </p>
 
 <p>
