--- a/catalog.html
+++ b/catalog.html
@@ -50,6 +50,15 @@
             -------------------------------------------------
         </p>
     </h2>
+    
+    <p>
+        <img src="creature_comforts.jpeg" width=50 height=50>
+        <a href=https://open.spotify.com/album/7J4690wkcQ5wZg6zs2Zcis?si=jmeroh9JSoSPiiOUAs2wNw&dl_branch=1
+            target ="_blank">
+            A Small Bird - Creature Comforts
+            </a>
+            *
+            </p>
 
 
     <p>
