--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@ width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypt
 
 
 <h3>latest releases!</h3>
+<p>&nbsp;</p>
+
+<p>
+<a href=https://open.spotify.com/album/7J4690wkcQ5wZg6zs2Zcis?si=jmeroh9JSoSPiiOUAs2wNw&dl_branch=1
+    target ="_blank">
+    <img src="creature_comforts.jpeg" width=300>
+        </a>
+</p>
+<h3>A Small Bird - Creature Comforts</h3>
+<p> Mastered </p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 <p>
 <a href=https://open.spotify.com/album/265WW7jRehlmKPEofX7Hy5?si=fLcA5N5ASWqTHbbOtAvZKQ target="_blank">
