--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    
+<link rel="icon" href="logo.png">
 
 <title>Jake Z Music</title>
 
@@ -17,7 +19,7 @@ Jake Zeisel Audio Mixing and Mastering: Chicago,IL
 
 <h2>
 <div id="wrapper">
-<video width ="300" preload="auto" playsinline autoplay loop muted>
+<video width ="500" preload="auto" playsinline autoplay loop muted>
 <source src="jake4.mp4" type="video/mp4">
 </video>
 </div>
@@ -55,38 +57,40 @@ contact <a href="mailto: jacobzeisel@gmail.com">jacobzeisel@gmail.com</a> for ra
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
 
 <iframe src="https://open.spotify.com/embed/playlist/2nZFDuAzX6LVxddrlEMHSc" 
-width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+width="350" height="350" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 
+<p>&nbsp;</p>
 <p>&nbsp;</p> 
-<p>&nbsp;</p> 
-<p>&nbsp;</p> 
 
 
-<h3>latest releases!</h3>
+<h3><u>latest releases!</u></h3>
 <p>&nbsp;</p>
 
 <p>
+<div class="album_cover_index">
 <a href=https://open.spotify.com/album/7J4690wkcQ5wZg6zs2Zcis?si=jmeroh9JSoSPiiOUAs2wNw&dl_branch=1
     target ="_blank">
     <img src="creature_comforts.jpeg" width=300>
         </a>
+</div>
 </p>
-<h3>A Small Bird - Creature Comforts</h3>
+<h4>A Small Bird - Creature Comforts</h4>
 <p> Mastered </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
 <p>
+<div class="album_cover_index">
 <a href=https://open.spotify.com/album/265WW7jRehlmKPEofX7Hy5?si=fLcA5N5ASWqTHbbOtAvZKQ target="_blank">
 <img src="sawyerjames2.jpg" width=300>
 </a>
+</div>
 </p>
 
-<h3>Sawyer James - Haiku</h3>
+<h4>Sawyer James - Haiku</h4>
 
 <p>
 Mastered
@@ -96,12 +100,14 @@ Mastered
 <p>&nbsp;</p> 
 
 <p>
+<div class="album_cover_index">
 <a href=https://open.spotify.com/album/4XVk40okyOmKLpkRKJKN7C?si=wbwQjJKWQPyT3z0fQ81y9gtarget="_blank">
 <img src="solarsurfer.jpg" width=300>
 </a>
+</div>
 </p>
 
-<h3>Surf Party USA - Solar Surfer</h3>
+<h4>Surf Party USA - Solar Surfer</h4>
 
 <p>
 Mastered
