--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     
-<meta name="viewport" content="width=480px">
+<meta name="viewport" content="width=device-width">
     
 <link rel="icon" href="logo.png">
 
