--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
 <link href="style.css" type= "text/css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="iphone.css" />
         
 </head>
 
