--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@ Jake Zeisel Audio Mixing and Mastering: Chicago,IL
 <a href="dancer.html">dancer</a> 
 </p>
 
-<p>&nbsp;</p> 
+<p>&nbsp;</p>
 
+
+<b>
 <p>
 Jake Zeisel is an audio mixing and mastering engineer based in 
 <a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago, IL</a>.
@@ -60,6 +62,7 @@ he would LOVE to work with you on your next album or song or film or podcast
 <p>
 contact <a href="mailto: jacobzeisel@gmail.com">jacobzeisel@gmail.com</a> for rates and availability
 </p>
+</b>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -77,8 +80,19 @@ width="350" height="350" frameborder="0" allowtransparency="true" allow="encrypt
 
 <p>
 <div class="album_cover_index">
-<a href=https://open.spotify.com/album/7J4690wkcQ5wZg6zs2Zcis?si=jmeroh9JSoSPiiOUAs2wNw&dl_branch=1
-    target ="_blank">
+<a href = https://open.spotify.com/album/2Ja5Kkk7sssK1MXiAJmRPs?si=7rIvyZwdTFWAtZmv4LOtTQ&dl_branch=1 target ="_blank">
+    <img src="Youcantakeit.jpg" width=300>
+        </a>
+</div>
+</p>
+<h4>Family Consumer Science - You Can Take It (Single)</h4>
+<p> Mastered </p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<p>
+<div class="album_cover_index">
+<a href=https://open.spotify.com/album/7J4690wkcQ5wZg6zs2Zcis?si=jmeroh9JSoSPiiOUAs2wNw&dl_branch=1     target ="_blank">
     <img src="creature_comforts.jpeg" width=300>
         </a>
 </div>
@@ -101,24 +115,3 @@ width="350" height="350" frameborder="0" allowtransparency="true" allow="encrypt
 <p>
 Mastered
 </p>
-
-<p>&nbsp;</p> 
-<p>&nbsp;</p> 
-
-<p>
-<div class="album_cover_index">
-<a href=https://open.spotify.com/album/4XVk40okyOmKLpkRKJKN7C?si=wbwQjJKWQPyT3z0fQ81y9gtarget="_blank">
-<img src="solarsurfer.jpg" width=300>
-</a>
-</div>
-</p>
-
-<h4>Surf Party USA - Solar Surfer</h4>
-
-<p>
-Mastered
-</p>
-
-
-
-
