--- a/index.html
+++ b/index.html
@@ -80,24 +80,24 @@ width="350" height="350" frameborder="0" allowtransparency="true" allow="encrypt
 
 <p>
 <div class="album_cover_index">
-<a href = https://open.spotify.com/album/2Ja5Kkk7sssK1MXiAJmRPs?si=7rIvyZwdTFWAtZmv4LOtTQ&dl_branch=1 target ="_blank">
-    <img src="Youcantakeit.jpg" width=300>
+<a href=https://surfpartyusa.bandcamp.com/track/surfing-2021-mix target ="_blank">
+    <img src="surfing.jpeg" width=300>
         </a>
 </div>
 </p>
-<h4>Family Consumer Science - You Can Take It (Single)</h4>
+<h4>Surf Party, USA - Surfing (2021 Mix) (Single)</h4>
 <p> Mastered </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
 <p>
 <div class="album_cover_index">
-<a href=https://open.spotify.com/album/7J4690wkcQ5wZg6zs2Zcis?si=jmeroh9JSoSPiiOUAs2wNw&dl_branch=1     target ="_blank">
-    <img src="creature_comforts.jpeg" width=300>
+<a href = https://open.spotify.com/album/2Ja5Kkk7sssK1MXiAJmRPs?si=7rIvyZwdTFWAtZmv4LOtTQ&dl_branch=1 target ="_blank">
+    <img src="Youcantakeit.jpg" width=300>
         </a>
 </div>
 </p>
-<h4>A Small Bird - Creature Comforts</h4>
+<h4>Family Consumer Science - You Can Take It (Single)</h4>
 <p> Mastered </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
