--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="main_index">
 
 <h1>
-Jake Zeisel Audio Mixing and Mastering: Chicago,IL
+Jake Zeisel : Audio Mixing and Mastering : Chicago,IL
 </h1>
 
 <h2>
@@ -35,8 +35,6 @@ Jake Zeisel Audio Mixing and Mastering: Chicago,IL
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
 <a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
 <!--<a href="blog.html">blog</a> &nbsp;&nbsp;&nbsp; -->
-<a href="human.html">human</a>&nbsp;&nbsp;&nbsp;
-<a href="dancer.html">dancer</a> 
 </p>
 
 <p>&nbsp;</p>
