knapsack and sneaker

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Jake Zeisel : Audio Mixing and Mastering : Chicago,IL
 
 <p>
 <a href="index.html">home</a> &nbsp;&nbsp;&nbsp;
-<a href="catalog.html">credits</a> &nbsp;&nbsp;&nbsp;
+<a href="catalog.html">discog</a> &nbsp;&nbsp;&nbsp;
 <!--<a href="blog.html">blog</a> &nbsp;&nbsp;&nbsp; -->
 </p>
 
@@ -79,38 +79,24 @@ width="350" height="350" frameborder="0" allowtransparency="true" allow="encrypt
 
 <p>
 <div class="album_cover_index">
-<a href=https://surfpartyusa.bandcamp.com/track/surfing-2021-mix target ="_blank">
-    <img src="surfing.jpeg" width=300>
+<a href = https://open.spotify.com/album/5wYuxQIfPo9bsBZvGIETOW?si=6PPCKz3wSwa6ifhoPAzaXA target ="_blank">
+    <img src="knapsack.jpg" width=300>
         </a>
 </div>
 </p>
-<h4>Surf Party, USA - Surfing (2021 Mix) (Single)</h4>
-<p> Mastered </p>
+<h4>Flintknapper - Knapsack (Album)</h4>
+<p> Mixed / Mastered </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
 <p>
 <div class="album_cover_index">
-<a href = https://open.spotify.com/album/2Ja5Kkk7sssK1MXiAJmRPs?si=7rIvyZwdTFWAtZmv4LOtTQ&dl_branch=1 target ="_blank">
-    <img src="Youcantakeit.jpg" width=300>
+<a href = https://open.spotify.com/album/2yid6yt28E0Rfbzzv41wol?si=fjEaWmNwSm2Dmgkzk3qckg target ="_blank">
+    <img src="sneaker.JPG" width=300>
         </a>
 </div>
 </p>
-<h4>Family Consumer Science - You Can Take It (Single)</h4>
-<p> Mastered </p>
+<h4>Roseloft - Sneaker (Single)</h4>
+<p> Mixed / Performed </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-
-<p>
-<div class="album_cover_index">
-<a href=https://open.spotify.com/album/265WW7jRehlmKPEofX7Hy5?si=fLcA5N5ASWqTHbbOtAvZKQ target="_blank">
-<img src="sawyerjames2.jpg" width=300>
-</a>
-</div>
-</p>
-
-<h4>Sawyer James - Haiku</h4>
-
-<p>
-Mastered
-</p>
