--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,33 @@
             -------------------------------------------------
         </p>
     </h2>
-    
+    <p>
+    <a href = https://open.spotify.com/album/1Z4sQWSO227yQWQZxwaHE1?si=AG6p83QOQr-sGj_uVIyRbw
+    target = "_blank">
+    <img src="bootsdeatherage.jpg" width=50 height=50> Boots Deatherage - I Will Grow Up (Single)</a> *
+    </p>
+
+
+    <p>
+    <a href = https://open.spotify.com/album/0jbKyh5ZIhxNdFKiDhSX02?si=-E__Sy6pTkaCn0N-pT920g
+    target = "_blank">
+    <img src="surfpartyrocks.jpg" width=50 height=50> Surf Party U.S.A. - Rocks!!!</a> *
+    </p>
+
+    <p>
+    <a href = https://open.spotify.com/album/3HwaJEG1WYWnIp6JEpqOn2?si=vN18i6fuTqSb6s6wz3IepQ
+    target = "_blank">
+    <img src="companion.jpg" width=50 height=50> Mark Twang - Companion </a> *
+    </p>
+
+
+
+    <p>
+        <a href = https://open.spotify.com/album/3XiCZQEpf7FDRgB2dGLq4G?si=50LEk-F4Rwu5IrBFmUHEgw
+	    target = "_blank">
+	        <img src="besides.jpg" width=50 height=50> A Small Bird - Besdies</a> *
+    </p>
+
     <p>
         
         <a href = https://open.spotify.com/track/79UAftl32dkucp9ckfqHlo?si=f117cc5868eb4213
