update index new albums

--- a/index.html
+++ b/index.html
@@ -79,24 +79,24 @@ width="350" height="350" frameborder="0" allowtransparency="true" allow="encrypt
 
 <p>
 <div class="album_cover_index">
-<a href = https://open.spotify.com/album/5wYuxQIfPo9bsBZvGIETOW?si=6PPCKz3wSwa6ifhoPAzaXA target ="_blank">
-    <img src="knapsack.jpg" width=300>
+<a href = https://open.spotify.com/album/3HwaJEG1WYWnIp6JEpqOn2?si=W6H64_6SSmWjMDe1QrUKYA target ="_blank">
+    <img src="companion.jpg" width=300>
         </a>
 </div>
 </p>
-<h4>Flintknapper - Knapsack (Album)</h4>
-<p> Mixed / Mastered </p>
+<h4>Mark Twang - Companion LP</h4>
+<p> mastered </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
 <p>
 <div class="album_cover_index">
-<a href = https://open.spotify.com/album/2yid6yt28E0Rfbzzv41wol?si=fjEaWmNwSm2Dmgkzk3qckg target ="_blank">
-    <img src="sneaker.JPG" width=300>
+<a href = https://open.spotify.com/album/1Z4sQWSO227yQWQZxwaHE1?si=vQvxFymgRr-p9HjT_bd1aQ target ="_blank">
+    <img src="bootsdeatherage.jpg" width=300>
         </a>
 </div>
 </p>
-<h4>Roseloft - Sneaker (Single)</h4>
-<p> Mixed / Performed </p>
+<h4>Boots Deatherage - I Will Grow Up (Single)</h4>
+<p> mastered </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
