--- a/catalog.html
+++ b/catalog.html
@@ -75,7 +75,7 @@
     <p>
         <a href = https://open.spotify.com/album/3XiCZQEpf7FDRgB2dGLq4G?si=50LEk-F4Rwu5IrBFmUHEgw
 	    target = "_blank">
-	        <img src="besides.jpg" width=50 height=50> A Small Bird - Besdies</a> *
+	        <img src="besides.jpg" width=50 height=50> A Small Bird - Besides</a> *
     </p>
 
     <p>
